Revision history for Mojolicious-Plugin-BootstrapHelpers

{{$NEXT}}
 [API Changes]

 [Bug Fixes]

 [Documentation]

 [Enhancements]

 [Meta]

 [New Features]

 [Revision]

0.0174 2014-09-20T23:06:25Z CEST
 [Enhancements]
 - Improved navbar support (see examples)

0.0173 2014-09-19T23:50:31Z CEST
 [Documentation]
 - Fixed some internal links.
 - Fixed pod typo under init_short_strappings.

 [Enhancements]
 - Support for nav pills and nav tabs (undocumented)
 - Partial support for navbar (also undocumented)

0.0172 2014-09-17T22:51:58Z CEST
 [API Changes]
 - Actually removed input-group behaviour from form-group (it had already
   been deprecated and de-documented).

 [Documentation]
 - Introduces the |...| syntax definition syntax.

 [Enhancements]
 - Added toolbar support.
 - Added input group support.

 [Meta]
 - Add DZP::PkgVersion::Block to build dependencies.

0.0171 2014-09-16T23:11:42Z CEST
 [Documentation]
 - Synopsis contained a partially deprecated example.

 [Enhancements]
 - Added 'vertical' strapping to button group.
 - Added 'justified' strapping to button group.
 - Added 'dropup' strapping to nested button groups.
 - Added shortcut to create a single button dropdown.
 - Added type="button" to all buttons that should have it.

 [Meta]
 - Use DZP::PkgVersion::Block.

0.0170 2014-09-15T20:44:29Z CEST
 [Enhancements]
 - Added button group support (also supports nested groups)

0.0161 2014-09-14T21:23:07Z CEST
 [Meta]
 - Shorter version numbers

 [New Features]
 - Undocumented preliminary support for button groups.

0.0160 2014-09-13T15:59:45Z CEST
 [API Changes]
 - Improved the dropdown syntax. Now the arguments for the button goes in
   the 'button' array ref.

 [Enhancements]
 - Fixed spacing around caret.
 - Added disabled strapping to dropdown item.

0.015.001 2014-09-12T18:46:54Z CEST
 [API Changes]
 - Remove divier from dropdown definition. Replaced by empty array ref.

 [New Features]
 - Use a string in a dropdown to create a dropdown header.
