@@ -73,7 +73,7 @@
          "web" : "https://github.com/Csson/p5-mojolicious-plugin-bootstraphelpers"
       }
    },
-   "version" : "0.0174",
+   "version" : "0.0180",
    "x_contributors" : [
       "Erik Carlsson <info@code301.com>"
    ]
